# Sim_LAMMPS_IFF_PCFF_HeinzMishraLinEmami_2015Ver1v5_FccmetalsMineralsSolventsPolymers

./: CMakeLists.txt  iff.lammps  iff.mass  iff.params  kimspec.edn  smspec.edn
